# House-Price-Prediction-Machine-Learning

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  start_dashboard.bat
.github/workflows/: ci.yml
docs/: PDF_CONVERTER_README.md  accuracy_assessment.md  analysis_overview.md  business_vision.md  convert_docs_to_pdf.bat  convert_to_pdf.py  hypothesis_assessment.md  quick_start.md  storytelling.md  testing_and_optimization.md
docs/datasets/: README.md  ames_clean.csv
examples/: api_usage_example.py
frontend/: README.md  index.html  server.py
frontend/static/: script.js  style.css
models/: random_forest_metadata.joblib  xgboost.joblib  xgboost_metadata.joblib
notebooks/: house_price_prediction.ipynb
scripts/: clean_data.py
src/: api.py  data_preprocessing.py  evaluation_utils.py  model_utils.py
tests/: README.md  conftest.py
tests/api/: test_api_endpoints.py
tests/frontend/: test_frontend_server.py
tests/unit/: test_data_preprocessing.py  test_evaluation_utils.py  test_model_utils.py
